# sport-places-2025

./: pyproject.toml
config/: settings.py  urls.py
places/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
places/migrations/: 0001_initial.py  0002_pendingplace.py  0003_comment_rating.py  0004_place_latitude_place_longitude_place_user_photo.py  0005_remove_photo_place_photo_pending_place.py  0006_photo_place_alter_photo_pending_place.py  0007_pendingplace_created_at_pendingplace_latitude_and_more.py  0008_category_pendingplace_category_place_category.py  0009_category_cover_photo_category_view_count.py
places/static/css/: styles.css
places/templatetags/: filters.py
templates/admin/places/pendingplace/: change_form.html
templates/base/: base.html
templates/places/: add_place.html  category_detail.html  edit_place.html  home.html  place_detail.html
templates/registration/: login.html  register.html
