[project]
name = "sport-places-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei-KV",email = "a.v.kovalev9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "django-stubs (>=5.2.2,<6.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "pillow (>=11.3.0,<12.0.0)",
]

[tool.poetry]
packages = [{include = "sport_places_2025", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
